<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Reminder"
    tools:context=".AddNote">

    <!--ID DEL USUARIO-->
    <TextView
        android:id="@+id/Userid_User"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/vanilla"
        android:hint="@string/Userid_User"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--MAIL DEL USUARIO-->
    <TextView
        android:id="@+id/User_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/vanilla"
        android:hint="@string/User_mail"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Userid_User" />

    <!--FECHA Y HORA DEL SISTEMA-->
    <TextView
        android:id="@+id/Current_Date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/vanilla"
        android:hint="@string/Current_Date_time"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/User_mail" />

    <!--TITULO DE LA NOTA-->
    <EditText
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/vanilla"
        android:hint="@string/Title"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Current_Date_time" />

    <!--DESCRIPCION DE LA NOTA-->
    <EditText
        android:id="@+id/Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="start"
        android:hint="@string/Description"
        android:minHeight="150dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <!--BOTON DE CALENDARIO-->
    <Button
        android:id="@+id/Calendar_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/Calendar_btn"
        app:icon="@drawable/icon_calendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Description" />

    <!--FECHA SELECCIONADA-->
    <TextView
        android:id="@+id/Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/vanilla"
        android:hint="@string/Date"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/Calendar_btn"
        app:layout_constraintTop_toBottomOf="@+id/Description" />

    <!--ESTADO DE LA NOTA-->
    <TextView
        android:id="@+id/Status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/vanilla"
        android:text="@string/Status"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Calendar_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>