<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Reminder"
        tools:context=".UpdateEvents.UpdateEvents">

        <!--USER ID-->
        <TextView
            android:id="@+id/Userid_User_Update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/vanilla"
            android:hint="@string/Userid_User_Update"
            android:visibility="gone"
            android:textColorHint="#757575"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--ID NOTA-->
        <TextView
            android:id="@+id/Id_Event_Update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/vanilla"
            android:text="@string/Id_Event_Update"
            android:visibility="gone"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Userid_User_Update" />

        <!--REGISTRATION DATE-->
        <TextView
            android:id="@+id/Registration_Date_Update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/vanilla"
            android:hint="@string/Registration_Date_Update"
            android:visibility="gone"
            android:textColorHint="#757575"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Id_Event_Update" />

        <!--NOTE FINISHED-->
        <ImageView
            android:id="@+id/Event_finished"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="#16A085"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/Image_Event_finished" />

        <!--NOTE NOT FINISHED-->
        <ImageView
            android:id="@+id/Event_not_finished"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="#E74C3C"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/Event_finished"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/Image_Event_Not_finished" />

        <!--NOTE STATUS-->
        <TextView
            android:id="@+id/Status_Update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/vanilla"
            android:text="@string/Status_Update"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/Event_not_finished"
            app:layout_constraintTop_toTopOf="parent" />

        <!--NOTE TITLE-->
        <EditText
            android:id="@+id/Title_Update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/vanilla"
            android:hint="@string/Title_Update"
            android:textColorHint="#78909C"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Registration_Date_Update"
            app:layout_constraintVertical_bias="0.0"
            android:inputType="text"
            android:autofillHints="" />

        <!--NOTE DESCRIPTION-->
        <EditText
            android:id="@+id/Description_Update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:hint="@string/Description_Update"
            android:minHeight="150dp"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Title_Update"
            app:layout_constraintVertical_bias="0.066"
            android:inputType="text"
            android:autofillHints="" />

        <!--CALENDAR BUTTON-->
        <Button
            android:id="@+id/Calendar_btn_Update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/pink_principal"
            android:text="@string/Calendar_btn_Update"
            app:cornerRadius="32sp"
            app:icon="@drawable/icon_calendar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Description_Update"
            app:layout_constraintVertical_bias="0.117"
            tools:ignore="TextContrastCheck" />

        <!--DATE SELECTED-->
        <TextView
            android:id="@+id/Date_Update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/vanilla"
            android:hint="@string/Date_Update"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.136"
            app:layout_constraintStart_toEndOf="@+id/Calendar_btn_Update"
            app:layout_constraintTop_toBottomOf="@+id/Description_Update"
            app:layout_constraintVertical_bias="0.232" />

        <!--TIME BUTTON-->
        <Button
            android:id="@+id/Hour_btn_Update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="296dp"
            android:backgroundTint="@color/pink_principal"
            android:text="@string/Hour_btn_Update"
            app:cornerRadius="32sp"
            app:icon="@drawable/icon_hour"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Calendar_btn_Update"
            app:layout_constraintVertical_bias="0.024"
            tools:ignore="TextContrastCheck" />

        <!--TIME SELECTED-->
        <TextView
            android:id="@+id/Hour_Update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="126dp"
            android:fontFamily="@font/vanilla"
            android:hint="@string/Hour_Update"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/Hour_btn_Update"
            app:layout_constraintTop_toBottomOf="@+id/Date_Update"
            app:layout_constraintVertical_bias="0.285" />

        <Spinner
            android:id="@+id/Spinner_Status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/New_Status"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Hour_btn_Update"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/New_Status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/vanilla"
            android:text="@string/New_Status"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Spinner_Status"
            app:layout_constraintTop_toBottomOf="@+id/Hour_btn_Update" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>