<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/item_title"
        android:layout_width="234dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/item_title"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_hour"
        android:layout_width="51dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/item_hour"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/item_title"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/item_elipsis"
        android:layout_width="32dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="32dp"
        android:onClick="otherOptions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_hour"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_elipsis"
        android:contentDescription="@string/aditional_options"/>


</androidx.constraintlayout.widget.ConstraintLayout>