<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Reminder"
        tools:context=".AddEvents.AddEvent">

        <!--USER ID-->
        <TextView
            android:id="@+id/Userid_User"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/Userid_User"
            android:textColorHint="#585858"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/Current_Date_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--SYSTEM TIME AND DATE-->
        <TextView
            android:id="@+id/Current_Date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/Current_Date_time"
            android:textColorHint="#585858"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Userid_User" />

        <!--EVENT TITLE-->
        <EditText
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:hint="@string/Title"
            android:inputType="textMultiLine"
            android:textColorHint="#585858"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/Description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Current_Date_time" />

        <!--EVENT DESCRIPTION-->
        <EditText
            android:id="@+id/Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:gravity="start"
            android:hint="@string/Description"
            android:inputType="textMultiLine"
            android:minHeight="150dp"
            android:textColorHint="#585858"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/Calendar_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Title" />

        <!--CALENDAR BUTTON-->
        <Button
            android:id="@+id/Calendar_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="88dp"
            android:backgroundTint="@color/pink_principal"
            android:text="@string/Calendar_btn"
            android:textColor="@color/black"
            app:cornerRadius="32sp"
            app:icon="@drawable/icon_calendar"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.061"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Description"
            app:layout_constraintVertical_bias="0.117"
            tools:ignore="TextContrastCheck" />

        <!--DATE SELECTED-->
        <TextView
            android:id="@+id/Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="90dp"
            android:hint="@string/Date"
            android:textColorHint="#585858"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Calendar_btn"
            app:layout_constraintTop_toBottomOf="@+id/Description"
            app:layout_constraintVertical_bias="0.0" />

        <!--TIME BUTTON-->

        <!--TIME SELECTED-->

        <Button
            android:id="@+id/Hour_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/pink_principal"
            android:text="@string/Hour_btn"
            android:textColor="@color/black"
            app:cornerRadius="32sp"
            app:icon="@drawable/icon_hour"
            app:iconTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.027"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Calendar_btn"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/Hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/Hour"
            android:textColorHint="#585858"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.56"
            app:layout_constraintStart_toEndOf="@+id/Hour_btn"
            app:layout_constraintTop_toBottomOf="@+id/Date"
            app:layout_constraintVertical_bias="0.083" />

        <!--NOTE STATUS-->
        <TextView
            android:id="@+id/Status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Status"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.034"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Hour_btn"
            app:layout_constraintVertical_bias="0.037" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>