<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GithubActivity"
    android:background="@color/black">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="141dp"
        android:layout_height="142dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.329"
        app:srcCompat="@drawable/image"
        android:contentDescription="@string/todo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmail"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:hintTextColor="#858585"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/boxEmail"
            android:layout_width="314dp"
            android:layout_height="56dp"
            android:hint="@string/hint_Correo"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/botonLogin"
        android:layout_width="309dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/white"
        android:text="@string/github_Login"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutEmail"
        app:layout_constraintVertical_bias="0.091" />

</androidx.constraintlayout.widget.ConstraintLayout>